SOS-1675 fix nav item word-wrap

--- a/portlets/so-portlet/docroot/user_bar/css/main.css
+++ b/portlets/so-portlet/docroot/user_bar/css/main.css
@@ -106,6 +106,7 @@ html > body.lfr-dockbar-pinned {
 
 	.dashboard-nav {
 		position: relative;
+		width: 100%;
 		z-index: 2;
 	}
 
@@ -145,7 +146,8 @@ html > body.lfr-dockbar-pinned {
 	}
 
 	nav {
-		display:inline-block;
+		display: inline-block;
+		width: 90%;
 	}
 
 	.has-submenu {
